--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+  font-size: 16px;
+  --theme-color: #59b256;
+
+  /* --main-color: #eaeaea;
+  --secondaryColor:#fff;
+
+  --borderColor:#c1c1c1;
+
+  --mainText:black;
+	--secondaryText:#4b5156;
+
+  --theme-dot-border: #24292e; */
+  scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  font-family: 'Poppins', sans-serif;
+  /* background: var(--theme-color); */
+  background-color: #351F3A;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1, h2, h3, h4, h5, h6, strong{
+	/* color: var(--mainText); */
+	font-family: 'Russo One', sans-serif;
+	font-weight: 500;
+}
+p, li, span, label, input, textarea{
+	color: var(--secondaryText);
+}
+
+img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+a{
+  text-decoration: inherit;
+  color: inherit;
+}
+button{
+  border: none;
+  outline: none;
+}
+
+.theme_selector{
   display: flex;
-  flex-direction: column;
+  position: fixed;
+  top: 40px;
+  right: 0;
+  width: fit-content;
+  /* background: aqua; */
+  border-radius: 10px;
+  transform: translateX(100px);
+  transition: 300ms;
+  z-index: 999;
+  border: 1px solid #fff;
+}
+.theme{
+  transform: translateX(0px);
+}
+.theme_selector > button{
+  font-size: .8rem;
+  font-weight: 900;
+  padding: .6em;
+  cursor: pointer;
+  background: var(--theme-color);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  color: #fff;
+}
+
+.theme_options_wrapper{
+  width: 100px;
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgba(78, 77, 77, 0.486);
+}
+.theme_dot{
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  /* background: rgb(255, 255, 255); */
+  border: 2px solid var(--theme-dot-border);
+  cursor: pointer;
+  margin: 0 4px;
+}
+.theme_dot:hover{
+  /* border-width: 5px; */
+  outline: 5px solid;
+}
+.theme_dot.selected{
+  outline: 3px solid #fff;
+  /* background-color: var(--theme-color); */
 }
 
-.App-link {
-  color: #61dafb;
+
+#default-mode{
+  background-color: #59b256;
+}
+#blue-mode{
+  background-color: #00aac1;
+}
+#purple-mode{
+  background-color: #7e4c74;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+/* @media (max-width: 480px){
+  :root{
+    font-size: 20px;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+} */
